--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #8292ed;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -73,7 +73,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #6298ef;
   }
 }
 
