--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  width: 100%;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -19,12 +19,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 1rem;
+  width: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
   border-radius: 8px;
@@ -69,8 +67,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #0b0c0c;
+    background-color: #efd5d5;
   }
   button {
     background-color: #6298ef;
