--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  width: 100%;
+  /* width: 100%; */
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -17,7 +17,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
   padding: 1rem;
   width: 100%;
@@ -69,6 +68,7 @@ button:focus-visible {
   :root {
     color: #0b0c0c;
     background-color: #efd5d5;
+    width: 100%;
   }
   button {
     background-color: #6298ef;
